--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <div class="count-box">
         <span id="mins">00</span><span>:</span><span id="ones">00</span><span>:</span><span id="tens">00</span>
     </div>
-    <button class="start">Start</button>
-    <button class="stop">Stop</button>
-    <button class="lap">Laps</button><br>
-    <button class="rst">Reset</button><br>
+    <button id='start'>Start</button>
+    <button id='stop'>Stop</button>
+    <button id='lap'>Laps</button><br>
+    <button id='rst'>Reset</button>
     </div>
     </div>
     
